--- a/PInvokeUtils.DllImportGenerator.Test/PlatformInvokeGenerator.Test.csproj
+++ b/PInvokeUtils.DllImportGenerator.Test/PlatformInvokeGenerator.Test.csproj
@@ -3,11 +3,9 @@
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net7.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
+		<LangVersion>7.3</LangVersion>
 		<EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
 	<ItemGroup>
